--- a/header5.html
+++ b/header5.html
@@ -30,15 +30,37 @@
     </header>
     <div class="principal__info">
         <section>
-            <h1>Let your <span>groceries</span> come to you</h1>
+            <h1 class="hero__title">Let your <span>groceries</span> come to you</h1>
             <p>Get fresh groceries online without stepping out to make delicious food with the freshest ingredients</p>
             <img src="img/header5/barrabuscar.svg" alt="">
         </section>
-        <section>
+        <section class="special__tick">
             <p class="tick">Fresh Vegetables</p>
             <p class="tick">100% Guarantee</p>
             <p class="tick">Cash on Delivery</p>
             <p class="tick">Fast Delivery</p>
+        </section>
+    </div>
+    <div class="down__info">
+        <section>
+            <img src="img/header5/Dairy.svg" alt="">
+            <h2>Dairy products</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </section>
+        <section>
+            <img src="img/header5/Fruits and vegetables.svg" alt="">
+            <h2>Vegetables & fruits</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </section>
+        <section>
+            <img src="img/header5/spices.svg" alt="">
+            <h2>Spices & seasoning</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </section>
+        <section>
+            <img src="img/header5/honey.svg" alt="">
+            <h2>Honey</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </section>
     </div>
 </body>
