--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
 </head>
 <body>
   <header>
+    <h1>Headers Matías Sánchez Prados</h1>
   <nav>
     <ul>
       <li><a href="header1.html"><img src="img/header1/logo.svg" alt="" class="logo"></a></li>
+      <li><a href="header2.html"><img src="img/header2/Livia.svg" alt=""></a></li>
       <li><a href="header3.html"><img src="img/header3/Logo.svg" alt=""></a></li>
-      <li><a href=""></a></li>
-      <li><a href=""></a></li>
+      <li><a href="header4.html"><img src="img/header5/logo.svg" alt=""></a></li>
+      <li><a href="header5.html"><img src="img/header5/logo.svg" alt=""></a></li>
+      <li><a href="header6.html"><img src="img/header6/GlowQueen.svg" alt=""></a></li>
+      <li><a href="header7.html"><img src="img/header5/logo.svg" alt=""></a></li>
+      <li><a href="header8.html"><img src="img/header5/logo.svg" alt=""></a></li>
+      <li><a href="header9.html"><img src="img/header5/logo.svg" alt=""></a></li>
+      <li><a href="header10.html"><img src="img/header5/logo.svg" alt=""></a></li>
     </ul>
   </nav>
 </header>
