--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title></title>
   <link rel="stylesheet" href="css/estilo.css">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -15,14 +16,8 @@
       <li><a href="header1.html"><img src="img/header1/logo.svg" alt="" class="logo"></a></li>
       <li><a href="header2.html"><img src="img/header2/Livia.svg" alt=""></a></li>
       <li><a href="header3.html"><img src="img/header3/Logo.svg" alt=""></a></li>
-      <li><a href="header4.html"><img src="img/header5/logo.svg" alt=""></a></li>
       <li><a href="header5.html"><img src="img/header5/logo.svg" alt=""></a></li>
       <li><a href="header6.html"><img src="img/header6/GlowQueen.svg" alt=""></a></li>
-      <li><a href="header7.html"><img src="img/header5/logo.svg" alt=""></a></li>
-      <li><a href="header8.html"><img src="img/header5/logo.svg" alt=""></a></li>
-      <li><a href="header9.html"><img src="img/header5/logo.svg" alt=""></a></li>
-      <li><a href="header10.html"><img src="img/header5/logo.svg" alt=""></a></li>
-    </ul>
   </nav>
 </header>
 </body>
