--- a/header6.html
+++ b/header6.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/estilo6.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Poppins&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
         <header>
