--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <li><a href="header8.html"><img src="img/header8/Arcane.svg" alt=""></a></li>
       <li><a href="header9.html"><img src="img/header9/GathSession.svg" alt=""></a></li>
       <li><a href="header10.html"><img src="img/header10/SoSo.svg" alt=""></a></li>
+      <li><a href="flechas/index.html"><img src="img/flechas/scootlogo.svg" alt=""></a></li>
     </ul>
   </nav>
 </header>
